--- a/app/_scss/areas/_post-template.scss
+++ b/app/_scss/areas/_post-template.scss
@@ -32,8 +32,6 @@
   } // dt
 
   dd {
-    width: -moz-calc(100% - 200px);
-    width: -webkit-calc(100% - 200px);
     width: calc(100% - 200px);
 
     @include bodhi(phone) {
