--- a/app/_scss/dependencies/variables/_sizes.scss
+++ b/app/_scss/dependencies/variables/_sizes.scss
@@ -2,7 +2,11 @@
 //  Sizes
 // ------------------------------------------------------------------
 
+$content-view-width: 1280px;
 $nest-width: 700px;
+$top-border-size: 10px;
 
 $sidebar-width: 430px;
-  $sidebar-width-tablet: 400px;
+
+$navigation-height: 100px;
+  $navigation-height-compact: 50px;
